# a2a-mcp-langgraph-agent-local

./: 1_a2a_starlette.py  2_a2a_executor.py  3_a2a_agent.py  CONTRIBUTING.md  LICENSE  README.md  blog.md  main.py  pyproject.toml  requirements.txt  start_agents.sh
src/: README.md  a2a_1_starlette.py  a2a_2_executor.py  a2a_3_agent.py  client.py  mcp_server.py  mcp_test_client.py  test_client.py
